[tool.poetry]
name = "python-flask-api"
version = "0.1.0"
description = ""
authors = ["Eduardo <ewang@bionexo.com>"]
readme = "README.md"
packages = [{include = "python_flask_api"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
