[tool.poetry]
name = "python-flask-api"
version = "0.1.0"
description = ""
authors = ["XXXX"]
readme = "README.md"
packages = [{include = "python_flask_api"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-basicauth = "^0.2.0"
textblob = "^0.17.1"
sklearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
